# historical-bloodlines-builder

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml  windows-portable.yml
docs/: architecture.md
examples/: input.example.xlsx
packaging/: HistoricalBloodlines.spec  README.md
scripts/: build_windows.ps1  prepare_graphviz.ps1  test_portable_windows.ps1
src/historical_bloodlines/: __init__.py  cli.py
src/historical_bloodlines/application/dto/: __init__.py  genealogy.py
src/historical_bloodlines/application/services/: __init__.py  assembler.py  build_genealogy.py  parser.py
src/historical_bloodlines/config/: __init__.py  paths.py  runtime.py  settings.py
src/historical_bloodlines/domain/: __init__.py  models.py
src/historical_bloodlines/infrastructure/: __init__.py  pdf.py
src/historical_bloodlines/infrastructure/excel/: __init__.py  reader.py
src/historical_bloodlines/infrastructure/graph/: __init__.py  labels.py  layout.py  models.py  renderer.py  validator.py
src/historical_bloodlines/presentation/: file_dialogs.py
src/historical_bloodlines/presentation/launcher/: __init__.py  __main__.py  app.py  components.py  navigation.py  screens.py  self_test.py  terminal.py
tests/: test_label_layout.py  test_launcher_navigation.py  test_pipeline.py  test_portable_runtime.py  test_refactor_invariants.py
